[gd_scene load_steps=6 format=3 uid="uid://diy2f44ffdnvb"]

[ext_resource type="Script" path="res://UI/InventoryUI/Inventory_Slot.gd" id="1_yhdnk"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="2_cib5k"]
[ext_resource type="Texture2D" uid="uid://dk5i0ss6k1m4u" path="res://assets/sprites/objects/resources/resource-iron.png" id="2_sswkq"]
[ext_resource type="Texture2D" uid="uid://kojggh7vqbwh" path="res://assets/sprites/ui/bg-panel.png" id="2_x1mwc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t7vc2"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1070.0
offset_bottom = -2432.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhdnk")

[node name="OuterBorder" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x1mwc")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="ItemQty" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 87.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_cib5k")
theme_override_font_sizes/font_size = 16
text = "1234"

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 24.0
offset_right = 34.0
offset_bottom = 40.0
scale = Vector2(4, 4)
texture = ExtResource("2_sswkq")
expand_mode = 2

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_t7vc2")

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
